schema/testdata/errors/operations_unused_inputs.keel
model Person {
    fields {
        name Text
    }

    actions {
        //expect-error:16:28:E034:create actions must accept all required fields that have no default value
        //expect-error:37:47:ActionInputError:personName is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        create createPerson() with (personName: name)
        //expect-error:39:49:ActionInputError:personName is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        update updatePerson(id) with (personName: Text)
    }
}
